# libmidi

./: CMakeLists.txt  MIDIChannelControllerEvent.cpp  MIDIChannelControllerEvent.h  MIDIChannelEvent.cpp  MIDIChunk.cpp  MIDIChunk.h  MIDIDefines.h  MIDIFile.cpp  MIDIFile.h  MIDIHeader.cpp  MIDIHeader.h  MIDIMetaEvent.cpp  MIDIMetaEvent.h  MIDIMetaGenericEvent.h  MIDIMetaNumberEvent.h  MIDIMetaUnknownEvent.cpp  MIDIMetaUnknownEvent.h  MIDITrack.cpp  MIDITrack.h  Makefile  README  types.cpp  types.h
docs/: CMakeLists.txt  Doxyfile.in  Doxygen.in
examples/: CMakeLists.txt  main.cpp
examples/mididump/: CMakeLists.txt  main.cpp
examples/midiscale/: CMakeLists.txt  main.cpp
examples/randommusic/: CMakeLists.txt  main.cpp
samples/: README  sonate_01_(c)hisamori.mid
src/: CMakeLists.txt  ChannelControllerEvent.cpp  ChannelControllerEvent.h  ChannelEvent.cpp  ChannelEvent.h  Chunk.cpp  Chunk.h  DataBuffer.cpp  DataBuffer.h  Defines.h  Event.cpp  Event.h  File.cpp  File.h  Header.cpp  Header.h  MIDI.h  MIDIChannelControllerEvent.cpp  MIDIChannelControllerEvent.h  MIDIChannelEvent.cpp  MIDIChannelEvent.h  MIDIChunk.cpp  MIDIChunk.h  MIDIDataBuffer.cpp  MIDIDataBuffer.h  MIDIDefines.h  MIDIEvent.cpp  MIDIEvent.h  MIDIFile.cpp  MIDIFile.h  MIDIHeader.cpp  MIDIHeader.h  MIDIMetaEvent.cpp  MIDIMetaEvent.h  MIDIMetaGenericEvent.cpp  MIDIMetaGenericEvent.h  MIDIMetaNumberEvent.cpp  MIDIMetaNumberEvent.h  MIDIMetaTextEvent.cpp  MIDIMetaTextEvent.h  (+15 more)
