SET(LIBMIDIREADER_VERSION 0.1)

SET( DOXYGEN_SOURCE_DIR_LIST
  ${CMAKE_SOURCE_DIR}/src
  ${CMAKE_SOURCE_DIR}/examples
)

SET(DOXYGEN_OUTPUT_DIR html)
STRING(REPLACE ";" " " DOXYGEN_SOURCE_DIR "${DOXYGEN_SOURCE_DIR_LIST}")
CONFIGURE_FILE(Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
SET(HTML_TARGET “html” )
ADD_CUSTOM_TARGET(${HTML_TARGET} ALL
  /usr/bin/doxygen ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
  DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
INSTALL( DIRECTORY “${CMAKE_CURRENT_BINARY_DIR}/html/” DESTINATION “/usr/share/doc/libmidireader-${LIBMIDIREADER_VERSION}” )

